objects/Income__c.object
<CustomObject>
    <description>To capture various sources of income for client cases. It tracks details such as income type (e.g., alimony, bonuses, child support, commissions), amounts (gross and net), and employment status.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>BusinessType__c</fullName>
        <label>Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Income</relationshipLabel>
        <relationshipName>Income</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FarmWorker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Farm Worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncomeTypeID__c</fullName>
        <label>Income Type ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alimony</fullName>
                </value>
                <value>
                    <fullName>Bonuses</fullName>
                </value>
                <value>
                    <fullName>Child Support</fullName>
                </value>
                <value>
                    <fullName>Comissions</fullName>
                </value>
                <value>
                    <fullName>Disability/SSI</fullName>
                </value>
                <value>
                    <fullName>Dividends/Interest</fullName>
                </value>
                <value>
                    <fullName>Overtime</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Retirement/SSI</fullName>
                </value>
                <value>
                    <fullName>Unemployment</fullName>
                </value>
                <value>
                    <fullName>Welfare (AFDC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthlyGrossIncome__c</fullName>
        <label>Monthly Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyNetIncome__c</fullName>
        <label>Monthly Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SelfEmployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearsInProfession__c</fullName>
        <label>Years In Profession</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Income</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income</pluralLabel>
    <recordTypes>
        <fullName>OtherIncome</fullName>
        <active>true</active>
        <label>Other Income</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrimaryIncome</fullName>
        <active>true</active>
        <label>Primary Income</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>